--- a/.learn/resets/11-postcard-divisions/index.html
+++ b/.learn/resets/11-postcard-divisions/index.html
@@ -10,7 +10,7 @@
 		<!-- start adding new tags here -->
 		<div class="postcard">
 			<div class="postcard-header">
-				<h1>My Postcard</h1>
+				<h1>My Postcard Hello</h1>
 				<img
 					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png
                 "
@@ -36,4 +36,3 @@
 		</div>
 	</body>
 </html>
-p
